--- a/src/app/tabular/tabular-view/tabular-view.component.scss
+++ b/src/app/tabular/tabular-view/tabular-view.component.scss
@@ -41,7 +41,7 @@
 }
 
 .status-icon {
-  width: 80px;
+  // width: 80px;
 }
 
 /deep/ {
