--- a/src/app/weather/weather-sidebar/weather-sidebar.component.scss
+++ b/src/app/weather/weather-sidebar/weather-sidebar.component.scss
@@ -22,7 +22,7 @@
         align: right;
       }
       .status {
-        width: 60px;
+
       }
       .buttons {
         width: 100%;
